# wizerproperties

./: .coderabbit.yaml  .gitignore  CLAUDE.md  README.md  all_pages_list.md  demo.env  docker-compose.yml  jsconfig.json  load-extensions.sh  mypy_report.txt  package-lock.json  package.json  pg-Dockerfile  pyproject.toml  tailwind.config.js  testing_report.md
src/: .dockerignore  Dockerfile  demo.env  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
src/advertise/: __init__.py  admin.py  apps.py  signals.py  urls.py  views.py
src/advertise/api/: urls.py
src/advertise/migrations/: 0001_initial.py  0002_alter_reel_url.py  0002_remove_reel_details_reel_property.py  0003_advertisement.py  0003_alter_reel_url.py  0004_alter_advertisement_property_adviewerlocation_and_more.py  0005_advertisement_end_at.py  0006_alter_advertisement_end_at_and_more.py  0007_remove_advertisement_end_at_and_more.py  0008_rename_type_advertisement_ad_location.py  0009_alter_advertisement_ad_location.py  0010_alter_advertisement_ad_location.py  0011_alter_advertisement_position.py  0012_advertisement_banner_and_more.py  0013_alter_addemography_options_and_more.py  0014_remove_advertisement_property_and_more.py  0015_alter_advertisement_content_type.py  0016_remove_advertisementlog_property_and_more.py  0017_remove_adviewerlocation_property_and_more.py  0018_add_new_ad_locations.py  0019_add_home_mid_and_developer_strip_locations.py
src/advertise/models/: __init__.py  ad_demography.py  advertisement.py  default.py
src/advertise/templates/: advertise-analytics.html  advertise-performance.html  create-edit-reels.html  create-reels.html  reels.html
src/blog/: admin.py  models.py  urls.py  views.py
src/blog/api/: filters.py  paginations.py  serializers.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_post_estimated_read_time_post_total_dislikes_and_more.py  0004_post_slug_alter_post_subtitle.py  0005_alter_post_slug_postinteraction.py  0006_alter_post_subtitle.py  0007_alter_category_options_alter_post_creator.py
src/blog/templates/: blog-details.html  blog-list.html
src/building/: admin.py  models.py  urls.py  views.py
src/building/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
src/building/migrations/: 0001_initial.py  0002_alter_buildingmedia_building.py  0003_alter_building_construction_year.py  0004_alter_building_price_and_more.py  0005_alter_building_address.py  0006_alter_buildingmedia_building.py  0007_alter_buildingmedia_file.py  0008_building_created_by.py  0009_building_district_building_province_and_more.py  0010_alter_building_price.py  0011_buildingreview.py  0012_rename_price_building_highest_price_and_more.py  0013_rename_have_lake_or_river_view_building_have_river_view_and_more.py  0014_building_have_pets_allowed.py  0015_building_latitude_building_longitude.py  0016_building_popular.py  0017_remove_building_popular_popularbuilding.py  0018_alter_popularbuilding_building.py  0019_building_have_access_to_arl_and_more.py  0020_remove_building_have_city_view_and_more.py  0021_alter_buildingmedia_type.py  0022_building_facility_view_building_location_view.py  0023_alter_buildingmedia_type.py  0024_alter_building_have_access_to_arl_and_more.py  0025_alter_building_have_access_to_arl_and_more.py  (+13 more)
src/core/: admin.py  models.py  sitemaps.py  urls.py
src/ipdata/: admin.py  apps.py  models.py
src/property/: admin.py  models.py  urls.py  views.py
src/schedule/: admin.py  models.py  urls.py  views.py
src/types/: globals.d.ts
src/user/: adapters.py  admin.py  apps.py  signals.py  urls.py
src/utils/: admin_settings.py  general_data.py  general_func.py  helper_func.py  seo.py  user_required.py  zoho_crm.py
src/wizerproperties/: asgi.py  urls.py
(+472 files in other folders)
