[tool.poetry]
name = "wizerproperties"
version = "0.1.0"
description = ""
authors = ["Mostafijur Rahman <mostafijur.rahman299@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.5"
psycopg2-binary = "^2.9.7"
python-decouple = "^3.8"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
