[tool.poetry]
name = "wizerproperties"
version = "0.1.0"
description = ""
authors = ["Mostafijur Rahman <mostafijur.rahman299@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.5"
psycopg2-binary = "^2.9.7"
python-decouple = "^3.8"
django-widget-tweaks = "^1.5.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.1.0"}
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
geopy = "^2.4.1"
openai = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
