[tool.poetry]
name = "wizerproperties"
version = "0.1.0"
description = ""
authors = ["Mostafijur Rahman <mostafijur.rahman299@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.27"
psycopg2-binary = "^2.9.7"
python-decouple = "^3.8"
django-widget-tweaks = "^1.5.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.1.0"}
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
geopy = "^2.4.1"
openai = "^1.13.3"
gunicorn = "^23.0.0"
django-ckeditor-5 = "^0.2.13"
faker = "^30.0.0"
django-allauth = "^65.13"
urllib3 = ">=2.6.3"
requests = ">=2.28.0,<3"
jwt = "^1.3.1"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "django-stubs (>=5.2.8,<6.0.0)",
    "djangorestframework-stubs (>=3.16.6,<4.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-python-dateutil (>=2.9.0.20251115,<3.0.0.0)",
    "types-django-filter (>=25.2.0.20251010,<26.0.0.0)",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-xdist",
    "factory-boy"
]
[tool.mypy]
files = ["."]
exclude = ["migrations/", "tests/fixtures/", "venv/", "third_party/"]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "decouple",
    "decouple.*",
    "allauth.*",
    "phonenumber_field.*",
    "django_ckeditor_5.*",
    "geopy.*",
    "django_widget_tweaks.*",
    "openai.*",
    "ckeditor_5.*",
    "jwt.*",
    "requests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["*.tests.*", "conftest"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["core.views.auth"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "wizerproperties.settings"
